[project]
name = "temp-ph"
version = "0.1.0"
description = ""
authors = [
    {name = "Sudhanva M Athreya",email = "sud.athreya@utah.edu"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[tool.poetry]
packages = [{include = "temp_ph", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
